@@ -21,8 +21,7 @@
 
 (require 'pccl)
 (unless-broken ccl-usable
-  (if (not (and (boundp 'MULE) MULE))
-      (setq flim-modules (cons 'mel-b-ccl flim-modules)))
+  (setq flim-modules (cons 'mel-b-ccl flim-modules))
   (setq flim-modules (cons 'mel-q-ccl flim-modules)))
 
 ;;; FLIM-ELS ends here
